--- a/platforms/android/assets/www/html/noteListItem.html
+++ b/platforms/android/assets/www/html/noteListItem.html
@@ -19,6 +19,14 @@
       LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT
       OR OTHERWISE, ARISING FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR
       OTHER DEALINGS IN THE SOFTWARE.
+
+      Project 3     Anthony Fernandez     noteListItem.html       10Mar2017
+  
+      Modifications Log:
+         NAME        DATE            DESCRIPTION
+      1. Anthony     10Mar2017       Mod lines 37 Added placement for STATUS
+      2. Anthony     15Mar2017       Mod lines 23-28 added Modifications log
+
     -->
 
 <body>
