--- a/www/html/textNoteEditView.html
+++ b/www/html/textNoteEditView.html
@@ -28,6 +28,11 @@
       <div class="ui-bar-button ui-tint-color ui-back-button">%BACK%</div>
     </div>
     <div class="ui-bar-button-group ui-align-right">
+		<select>
+      <option value="">----</option>
+			<option value="archive">Archive</option>
+			<option value="followup">Follow Up</option>
+		</select>
       <div class="ui-bar-button ui-destructive-color">%DELETE_NOTE%</div>
     </div>
   </div>
