--- a/platforms/android/assets/www/html/textNoteEditView.html
+++ b/platforms/android/assets/www/html/textNoteEditView.html
@@ -29,6 +29,7 @@
     </div>
     <div class="ui-bar-button-group ui-align-right">
 		<select>
+      <option value="">----</option>
 			<option value="archive">Archive</option>
 			<option value="followup">Follow Up</option>
 		</select>
