--- a/platforms/android/assets/www/html/textNoteEditView.html
+++ b/platforms/android/assets/www/html/textNoteEditView.html
@@ -19,6 +19,14 @@
       LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT
       OR OTHERWISE, ARISING FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR
       OTHER DEALINGS IN THE SOFTWARE.
+
+      Project 3     Anthony Fernandez     textNoteEditView.html       10Mar2017
+  
+      Modifications Log:
+         NAME        DATE            DESCRIPTION
+      1. Anthony     15Mar2017       Mod lines 23-28 Added Modifications log 
+      2. Anthony     15Mar2017       Mod lines 39-43 Added Options for Archive and Follow Up
+
     -->
 
 <body>
