--- a/www/html/textNoteEditView.html
+++ b/www/html/textNoteEditView.html
@@ -26,6 +26,7 @@
          NAME        DATE            DESCRIPTION
       1. Anthony     15Mar2017       Mod lines 23-28 Added Modifications log 
       2. Anthony     15Mar2017       Mod lines 39-43 Added Options for Archive and Follow Up
+      3. Anthony     16mAR2017       Mod lines 40-41 Added id, class, Set Status
 
     -->
 
@@ -36,11 +37,11 @@
       <div class="ui-bar-button ui-tint-color ui-back-button">%BACK%</div>
     </div>
     <div class="ui-bar-button-group ui-align-right">
-		<select>
-      <option value="">----</option>
-			<option value="archive">Archive</option>
-			<option value="followup">Follow Up</option>
-		</select>
+		  <select id="changeStatus" class="ui-change-status">
+        <option value="">----</option>Set Status</option>
+			  <option value="archive">Archive</option>
+			  <option value="followup">Follow Up</option>
+		  </select>
       <div class="ui-bar-button ui-destructive-color">%DELETE_NOTE%</div>
     </div>
   </div>
