--- a/www/html/textNoteEditView.html
+++ b/www/html/textNoteEditView.html
@@ -26,7 +26,7 @@
          NAME        DATE            DESCRIPTION
       1. Anthony     15Mar2017       Mod lines 23-28 Added Modifications log 
       2. Anthony     15Mar2017       Mod lines 39-43 Added Options for Archive and Follow Up
-      3. Anthony     16mAR2017       Mod lines 40-43 Added id, class, Set Status, Archive, Followup
+      3. Anthony     16Mar2017       Mod lines 40-43 Added id, class, Set Status, Archive, Followup
 
     -->
 
