--- a/platforms/android/assets/www/html/textNoteEditView.html
+++ b/platforms/android/assets/www/html/textNoteEditView.html
@@ -27,6 +27,7 @@
       1. Anthony     15Mar2017       Mod lines 23-28 Added Modifications log 
       2. Anthony     15Mar2017       Mod lines 39-43 Added Options for Archive and Follow Up
       3. Anthony     16Mar2017       Mod lines 40-43 Added id, class, Set Status, Archive, Followup
+      4. Anthony     17Mar2017       Mod lines 42 Changed ---- to Status
 
     -->
 
@@ -38,7 +39,7 @@
     </div>
     <div class="ui-bar-button-group ui-align-right">
 		  <select id="changeStatus" class="ui-change-status">
-        <option value="">----</option>Set Status</option>
+        <option value="">Status</option>Set Status</option>
 			  <option value="Archive">Archive</option>
 			  <option value="Followup">Follow Up</option>
 		  </select>
