--- a/www/html/audioNoteEditView.html
+++ b/www/html/audioNoteEditView.html
@@ -19,6 +19,16 @@
       LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT
       OR OTHERWISE, ARISING FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR
       OTHER DEALINGS IN THE SOFTWARE.
+
+      Project 3     Anthony Fernandez     textNoteEditView.html       17Mar2017
+  
+      Modifications Log:
+         NAME        DATE            DESCRIPTION
+      1. Anthony     17Mar2017       Mod lines 23-28 Added Modifications log 
+      2. Anthony     17Mar2017       Mod lines 39-43 Added Options for Archive and Follow Up
+      3. Anthony     17Mar2017       Mod lines 41-45 Added id, class, Set Status, Archive, Followup
+      4. Anthony     17Mar2017       Mod lines 42 Changed ---- to Status
+
     -->
 
 <body>
@@ -28,6 +38,11 @@
       <div class="ui-bar-button ui-tint-color ui-back-button">%BACK%</div>
     </div>
     <div class="ui-bar-button-group ui-align-right">
+      <select id="changeStatus" class="ui-change-status">
+        <option value="">Status</option>Set Status</option>
+			  <option value="Archive">Archive</option>
+			  <option value="Followup">Follow Up</option>
+		  </select>
       <div class="ui-bar-button ui-destructive-color">%DELETE_NOTE%</div>
     </div>
   </div>
